fix button mobile size

--- a/public/sass/components/_customButton.scss
+++ b/public/sass/components/_customButton.scss
@@ -9,6 +9,10 @@
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
 
+  @include mobile {
+    padding: 1rem 2rem;
+  }
+
   &:hover {
     background: $main-green;
     color: $white;
